--- a/about.html
+++ b/about.html
@@ -61,8 +61,8 @@
                                             <li><a href="index.html">Home</a></li>
                                             <li><a href="project.html">Team</a></li>
                                             <li><a href="services.html">Services</a></li>
-                                            <li><a href="Blog.html">Insight</a></li>
-                                            <li><a href="Blog.html">Contact</a></li>
+                                            <li><a href="blog.html">Insight</a></li>
+                                            <li><a href="contact.html">Contact</a></li>
                                         </ul>
                                     </nav>
                                 </div>
