--- a/elements.html
+++ b/elements.html
@@ -60,7 +60,7 @@
                                             <li><a href="project.html">Team</a></li>
                                             <li><a href="services.html">Services</a></li>
                                             <li><a href="Blog.html">Insight</a></li>
-                                            <li><a href="Blog.html">Contact</a></li>
+                                            <li><a href="contact.html">Contact</a></li>
                                         </ul>
                                     </nav>
                                 </div>
@@ -747,104 +747,82 @@
 	<!-- End Align Area -->
 	<footer>
 		<!-- Footer Start-->
-		<div class="footer-area footer-bg footer-padding">
-			<div class="container">
-				<div class="row d-flex justify-content-between">
-					<div class="col-xl-3 col-lg-3 col-md-4 col-sm-6">
-					   <div class="single-footer-caption mb-50">
-						 <div class="single-footer-caption mb-30">
-							 <div class="footer-tittle">
-								 <h4>About Us</h4>
-								 <div class="footer-pera">
-									 <p>Heaven fruitful doesn't over lesser days appear creeping seasons so behold bearing</p>
+		<div class="footer-main">
+			<div class="footer-area footer-padding">
+				<div class="container">
+					<div class="row justify-content-between">
+						<!-- Contact Details -->
+						<div class="col-lg-4 col-md-6 col-sm-8">
+							<div class="single-footer-caption mb-30">
+								<div class="footer-logo">
+									<a href="index.html">
+										<img src="assets/img/logo/logo2_footer.png" alt="Bin Mes'har & Co Logo">
+									</a>
 								</div>
-							 </div>
-						 </div>
-						  <!-- logo -->
-						  <div class="footer-logo">
-							<a href="index.html"><img src="assets/img/logo/logo2_footer.png" alt=""></a>
-						  </div>
-					   </div>
-					</div>
-					<div class="col-xl-3 col-lg-3 col-md-4 col-sm-5">
-						<div class="single-footer-caption mb-50">
-							<div class="footer-tittle">
-								<h4>Contact Info</h4>
-								<ul>
-									<li>
-									<p> Address :Your address goes
-									 here, your demo address.</p>
-									</li>
-									<li><a href="#">Phone : +8880 44338899</a></li>
-									<li><a href="#">Our Photo Gellary</a></li>
-								</ul>
+								<div class="footer-tittle">
+									<ul>
+										<li><strong>Dubai:</strong> Deira - Business Village Building Block B - 4th Floor - Office 412</li>
+										<li>Phone: (+971) 4 386 9999</li>
+										<li>Email: <a href="mailto:advocates@binmeshar.com">advocates@binmeshar.com</a></li>
+									</ul>
+									<ul>
+										<li><strong>Abu Dhabi:</strong> Al Muroor St. - Sorouh Tower - 11th Floor - Office 1103</li>
+										<li>Phone: (+971) 2 635 8585</li>
+										<li>Email: <a href="mailto:abudhabi@binmeshar.com">abudhabi@binmeshar.com</a></li>
+									</ul>
+								</div>
 							</div>
 						</div>
-					</div>
-					<div class="col-xl-3 col-lg-3 col-md-3 col-sm-5">
-						<div class="single-footer-caption mb-50">
-							<div class="footer-tittle">
-								<h4>Important Link</h4>
-								<ul>
-									<li><a href="#"> View Project</a></li>
-									<li><a href="#">Contact Us</a></li>
-									<li><a href="#">Testimonial</a></li>
-									<li><a href="#">Proparties</a></li>
-									<li><a href="#">Support</a></li>
-								</ul>
+	
+						<!-- Quick Links -->
+						<div class="col-lg-2 col-md-4 col-sm-5">
+							<div class="single-footer-caption mb-50">
+								<div class="footer-tittle">
+									<h4>Quick Links</h4>
+									<ul>
+										<li><a href="#">Contact Us</a></li>
+										<li><a href="#">Meet the Team</a></li>
+										<li><a href="#">Estimates</a></li>
+										<li><a href="#">Our Process</a></li>
+									</ul>
+								</div>
 							</div>
 						</div>
-					</div>
-					<div class="col-xl-3 col-lg-3 col-md-4 col-sm-5">
+	
+						<!-- News -->
+						<div class="col-lg-3 col-md-4 col-sm-7">
+							<div class="single-footer-caption mb-50">
+								<div class="footer-tittle">
+									<h4>News</h4>
+									<p>The UAE Visa Amnesty Programme: A Golden Opportunity to Resolve Residency Issues</p>
+									<p>September 30, 2024</p>
+								</div>
+							</div>
+						</div>
+	
+					   <!-- Follow Us -->
+					   <div class="col-lg-3 col-md-6 col-sm-8">
 						<div class="single-footer-caption mb-50">
 							<div class="footer-tittle">
-								<h4>Newsletter</h4>
-								<div class="footer-pera footer-pera2">
-								 <p>Heaven fruitful doesn't over lesser in days. Appear creeping seasons</p>
-							 </div>
-							 <!-- Form -->
-							 <div class="footer-form" >
-								 <div id="mc_embed_signup">
-									 <form target="_blank" action="https://spondonit.us12.list-manage.com/subscribe/post?u=1462626880ade1ac87bd9c93a&amp;id=92a4423d01"
-									 method="get" class="subscribe_form relative mail_part">
-										 <input type="email" name="email" id="newsletter-form-email" placeholder="Email Address"
-										 class="placeholder hide-on-focus" onfocus="this.placeholder = ''"
-										 onblur="this.placeholder = ' Email Address '">
-										 <div class="form-icon">
-											 <button type="submit" name="submit" id="newsletter-submit"
-											 class="email_icon newsletter-submit button-contactForm"><img src="assets/img/icon/form_icon.png" alt=""></button>
-										 </div>
-										 <div class="mt-10 info"></div>
-									 </form>
-								 </div>
-							 </div>
+								<h4>Follow Us</h4>
+								<ul class="social-links">
+									<li><a href="#"><i class="fab fa-facebook"></i> Facebook</a></li>
+									<li><a href="#"><i class="fab fa-instagram"></i> Instagram</a></li>
+									<li><a href="#"><i class="fab fa-linkedin"></i> LinkedIn</a></li>
+								</ul>
 							</div>
 						</div>
 					</div>
 				</div>
-			</div>
-		</div>
-		<!-- footer-bottom aera -->
-		<div class="footer-bottom-area footer-bg">
-			<div class="container">
-				<div class="footer-border">
-					 <div class="row d-flex justify-content-between align-items-center">
-						 <div class="col-xl-10 col-lg-10 ">
-							 <div class="footer-copy-right">
-								 <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-  Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-  <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
-							 </div>
-						 </div>
-						 <div class="col-xl-2 col-lg-2">
-							 <div class="footer-social f-right">
-								 <a href="#"><i class="fab fa-facebook-f"></i></a>
-								 <a href="#"><i class="fab fa-twitter"></i></a>
-								 <a href="#"><i class="fas fa-globe"></i></a>
-								 <a href="#"><i class="fab fa-behance"></i></a>
-							 </div>
-						 </div>
-					 </div>
+	
+					<!-- Copy-Right -->
+					<div class="row align-items-center">
+						<div class="col-xl-12">
+							<div class="footer-copy-right">
+								<p>All rights reserved &copy;2023 Bin Mes'har & Co</p>
+							</div>
+						</div>
+					</div>
 				</div>
 			</div>
 		</div>
