--- a/services_details.html
+++ b/services_details.html
@@ -62,7 +62,7 @@
                                             <li><a href="project.html">Team</a></li>
                                             <li><a href="services.html">Services</a></li>
                                             <li><a href="Blog.html">Insight</a></li>
-                                            <li><a href="Blog.html">Contact</a></li>
+                                            <li><a href="contact.html">Contact</a></li>
                                         </ul>
                                     </nav>
                                 </div>
