--- a/elements.html
+++ b/elements.html
@@ -59,7 +59,7 @@
                                             <li><a href="index.html">Home</a></li>
                                             <li><a href="project.html">Team</a></li>
                                             <li><a href="services.html">Services</a></li>
-                                            <li><a href="Blog.html">Insight</a></li>
+                                            <li><a href="blog.html">Insight</a></li>
                                             <li><a href="contact.html">Contact</a></li>
                                         </ul>
                                     </nav>
