--- a/index.html
+++ b/index.html
@@ -129,71 +129,74 @@
             </div>
         </div>
         <!-- slider Area End-->
-        <!-- Services Area Start -->
-        <div class="services-area1 section-padding30">
-            <div class="container">
-                <!-- section tittle -->
-                <div class="row">
-                    <div class="col-lg-12">
-                        <div class="section-tittle mb-55">
-                            <div class="front-text">
-                                <h2 class="">Our Services</h2>
-                            </div>
-                            <span class="back-text">Services</span>
-                        </div>
+          <!-- Services Area Start -->
+<div class="services-area1 section-padding30">
+    <div class="container">
+                  <!-- section tittle -->
+                  <div class="section-tittle section-tittle2 mb-55">
+                    <div class="front-text">
+                        <h2 class="">Our <br> Services</h2>
+                    </div>
+                    <span class="back-text">services</span>
+                </div>
+        
+        <!-- Services Cards -->
+        <div class="row">
+            <!-- Company Law -->
+            <div class="col-xl-4 col-lg-4 col-md-6">
+                <div class="single-service-card">
+                    <div class="card-icon">
+                        <i class="fas fa-building"></i> <!-- Example icon, you can change it -->
+                    </div>
+                    <div class="card-image">
+                        <img src="assets/img/service/servicess1.jpg" alt="Company Law">
+                    </div>
+                    <div class="card-content">
+                        <h4>Company Law</h4>
+                        <p>Our legal team has extensive experience in establishing different types of companies within and outside the Free Zones in the UAE...</p>
+                        <a href="services_details.html" class="card-btn">Read More</a>
                     </div>
                 </div>
-                <div class="row">
-                    <div class="col-xl-4 col-lg-4 col-md-6">
-                        <div class="single-service-cap mb-30">
-                            <div class="service-img">
-                                <img src="assets/img/service/servicess1.png" alt="">
-                            </div>
-                            <div class="service-cap">
-                                <h4><a href="services_details.html">COMPANIES LAW</a></h4>
-                                <a href="services_details.html" class="more-btn">Read More <i class="ti-plus"></i></a>
-                            </div>
-                            <div class="service-icon">
-                                <img src="assets/img/icon/services_icon1.png" alt="">
-                            </div>
-                        </div>
+            </div>
+
+            <!-- Commercial Law -->
+            <div class="col-xl-4 col-lg-4 col-md-6">
+                <div class="single-service-card">
+                    <div class="card-icon">
+                        <i class="fas fa-balance-scale"></i> <!-- Example icon, you can change it -->
                     </div>
-                    <div class="col-xl-4 col-lg-4 col-md-6">
-                        <div class="single-service-cap mb-30">
-                            <div class="service-img">
-                                <img src="assets/img/service/servicess2.png" alt="">
-                            </div>
-                            <div class="service-cap">
-                                <h4><a href="services_details.html">COMMERCIAL LAW</a></h4>
-                                <a href="services_details.html" class="more-btn">Read More <i class="ti-plus"></i></a>
-                            </div>
-                            <div class="service-icon">
-                                <img src="assets/img/icon/services_icon1.png" alt="">
-                            </div>
-                        </div>
+                    <div class="card-image">
+                        <img src="assets/img/service/servicess2.jpg" alt="Commercial Law">
                     </div>
-                    <div class="col-xl-4 col-lg-4 col-md-6">
-                        <div class="single-service-cap mb-30">
-                            <div class="service-img">
-                                <img src="assets/img/service/servicess3.png" alt="">
-                            </div>
-                            <div class="service-cap">
-                                <h4><a href="services_details.htmlaa">PROPERTY LAW</a></h4>
-                                <a href="services_details.html" class="more-btn">Read More <i class="ti-plus"></i></a>
-                            </div>
-                            <div class="service-icon">
-                                <img src="assets/img/icon/services_icon1.png" alt="">
-                            </div>
-                        </div>
+                    <div class="card-content">
+                        <h4>Commercial Law</h4>
+                        <p>We provide comprehensive legal services for commercial transactions, ensuring compliance with local and international laws...</p>
+                        <a href="services_details.html" class="card-btn">Read More</a>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Arbitration & Dispute Resolution -->
+            <div class="col-xl-4 col-lg-4 col-md-6">
+                <div class="single-service-card">
+                    <div class="card-icon">
+                        <i class="fas fa-handshake"></i> <!-- Example icon, you can change it -->
+                    </div>
+                    <div class="card-image">
+                        <img src="assets/img/service/servicess3.jpg" alt="Arbitration & Dispute Resolution">
+                    </div>
+                    <div class="card-content">
+                        <h4>Arbitration & Dispute Resolution</h4>
+                        <p>Our team specializes in resolving disputes through arbitration and mediation, providing efficient solutions...</p>
+                        <a href="services_details.html" class="card-btn">Read More</a>
                     </div>
                 </div>
             </div>
         </div>
-        <!-- Services Area End -->
+    </div>
+</div>
         <!-- About Area Start -->
-        <section class="support-company-area fix pt-10 pb-145
-        
-        ">
+        <section class="support-company-area fix pt-10 pb-145">
             <div class="support-wrapper align-items-end">
                 <div class="left-content">
                     <!-- section tittle -->
