--- a/services.html
+++ b/services.html
@@ -104,16 +104,13 @@
 <!-- Services Area Start -->
 <div class="services-area1 section-padding30">
     <div class="container">
-        <!-- Section Title -->
-        <div class="row">
-            <div class="col-lg-12">
-                <div class="section-title mb-55">
+                  <!-- section tittle -->
+                  <div class="section-tittle section-tittle2 mb-55">
                     <div class="front-text">
-                        <h2>What could we provide you with:</h2>
+                        <h2 class="">Our <br> Services</h2>
                     </div>
+                    <span class="back-text">services</span>
                 </div>
-            </div>
-        </div>
         
         <!-- Services Cards -->
         <div class="row">
