--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="manifest" href="site.webmanifest">
 		<link rel="shortcut icon" type="image/x-icon" href="assets/img/favicon.ico">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css">
+
 
 		<!-- CSS here -->
             <link rel="stylesheet" href="assets/css/bootstrap.min.css">
@@ -144,7 +146,7 @@
         <div class="row">
             <!-- Company Law -->
             <div class="col-xl-4 col-lg-4 col-md-6">
-                <div class="single-service-card">
+                <div class="single-service-card" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="500">
                     <div class="card-icon">
                         <i class="fas fa-building"></i> <!-- Example icon, you can change it -->
                     </div>
@@ -161,7 +163,7 @@
 
             <!-- Commercial Law -->
             <div class="col-xl-4 col-lg-4 col-md-6">
-                <div class="single-service-card">
+                <div class="single-service-card" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="600">
                     <div class="card-icon">
                         <i class="fas fa-balance-scale"></i> <!-- Example icon, you can change it -->
                     </div>
@@ -178,7 +180,7 @@
 
             <!-- Arbitration & Dispute Resolution -->
             <div class="col-xl-4 col-lg-4 col-md-6">
-                <div class="single-service-card">
+                <div class="single-service-card" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="700">
                     <div class="card-icon">
                         <i class="fas fa-handshake"></i> <!-- Example icon, you can change it -->
                     </div>
@@ -198,7 +200,7 @@
         <!-- About Area Start -->
         <section class="support-company-area fix pt-10 pb-145">
             <div class="support-wrapper align-items-end">
-                <div class="left-content">
+                <div class="left-content" data-aos="fade-right" data-aos-duration="1000" data-aos-delay="300">
                     <!-- section tittle -->
                     <div class="section-tittle section-tittle2 mb-55">
                         <div class="front-text">
@@ -212,7 +214,7 @@
                         <a href="about.html" class="btn red-btn2">read more</a>
                     </div>
                 </div>
-                <div class="right-content">
+                <div class="right-content" data-aos="fade-left" data-aos-duration="1000" data-aos-delay="00">
                     <!-- img -->
                     <div class="right-img">
                         <img src="assets/img/gallery/safe_in.png" alt="">
@@ -222,37 +224,37 @@
         </section>
         <!-- About Area End -->
         <!-- contact with us Start -->
-        <section class="contact-with-area" data-background="assets/img/gallery/section-bg2.jpg">
-            <div class="container">
-                <div class="row">
-                    <div class="col-xl-8 col-lg-9 offset-xl-1 offset-lg-1">
-                        <div class="contact-us-caption">
-                            <div class="team-info mb-30 pt-45">
-                                <!-- Section Tittle -->
-                                <div class="section-tittle section-tittle4">
-                                    <div class="front-text">
-                                        <h2 class="">Contact us</h2>
+            <section class="contact-with-area" data-background="assets/img/gallery/section-bg2.jpg" data-aos="fade-up">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-xl-8 col-lg-9 offset-xl-1 offset-lg-1">
+                            <div class="contact-us-caption">
+                                <div class="team-info mb-30 pt-45">
+                                    <!-- Section Tittle -->
+                                    <div class="section-tittle section-tittle4">
+                                        <div class="front-text">
+                                            <h2 class="">Contact us</h2>
+                                        </div>
+                                        <span class="back-text">Lat`s chat</span>
                                     </div>
-                                    <span class="back-text">Lat`s chat</span>
+                                    <p>Blending innovative thinking with exceptional client care is the cornerstone of our practice. We strive to serve our clients with care, diligence, openness and responsibility.</p>
+                                    <a href="#" class="white-btn">read more</a>
                                 </div>
-                                <p>Blending innovative thinking with exceptional client care is the cornerstone of our practice. We strive to serve our clients with care, diligence, openness and responsibility.</p>
-                                <a href="#" class="white-btn">read more</a>
                             </div>
                         </div>
                     </div>
                 </div>
-            </div>
-        </section>
+            </section>
         <!-- contact with us End-->
          <!-- Project Area Start -->
-        <section class="project-area  section-padding30">
+        <section class="project-area  section-padding30" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="300">
             <div class="container">
                <div class="project-heading mb-35">
                     <div class="row align-items-end">
                         <div class="col-lg-6">
                             <!-- Section Tittle -->
-                            <div class="section-tittle section-tittle3">
-                                <div class="front-text">
+                            <div class="section-tittle section-tittle3" data-aos="fade-up">
+                                <div class="front-text" data-aos="fade-up">
                                     <h2 class="">Doing our part</h2>
                                 </div>
                                 <span class="back-text">Gellary</span>
@@ -284,7 +286,7 @@
                                 <div class="project-caption">
                                     <div class="row">
                                         <div class="col-lg-4 col-md-6">
-                                            <div class="single-project mb-30">
+                                            <div class="single-project mb-30" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="300">
                                                 <div class="project-img">
                                                     <img src="assets/img/gallery/project1.png" alt="">
                                                 </div>
@@ -296,7 +298,7 @@
                                             </div>
                                         </div>
                                         <div class="col-lg-4 col-md-6">
-                                            <div class="single-project mb-30">
+                                            <div class="single-project mb-30" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="400">
                                                 <div class="project-img">
                                                     <img src="assets/img/gallery/project2.png" alt="">
                                                 </div>
@@ -308,7 +310,7 @@
                                             </div>
                                         </div>
                                         <div class="col-lg-4 col-md-6">
-                                            <div class="single-project mb-30">
+                                            <div class="single-project mb-30" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="500">
                                                 <div class="project-img">
                                                     <img src="assets/img/gallery/project3.png" alt="">
                                                 </div>
@@ -320,7 +322,7 @@
                                             </div>
                                         </div>
                                         <div class="col-lg-4 col-md-6">
-                                            <div class="single-project mb-30">
+                                            <div class="single-project mb-30" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="600">
                                                 <div class="project-img">
                                                     <img src="assets/img/gallery/project4.png" alt="">
                                                 </div>
@@ -331,8 +333,8 @@
                                                 </div>
                                             </div>
                                         </div>
-                                        <div class="col-lg-4 col-md-6">
-                                            <div class="single-project mb-30">
+                                        <div class="col-lg-4 col-md-6"> 
+                                            <div class="single-project mb-30" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="700">
                                                 <div class="project-img">
                                                     <img src="assets/img/gallery/project5.png" alt="">
                                                 </div>
@@ -344,7 +346,7 @@
                                             </div>
                                         </div>
                                         <div class="col-lg-4 col-md-6">
-                                            <div class="single-project mb-30">
+                                            <div class="single-project mb-30" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="800">
                                                 <div class="project-img">
                                                     <img src="assets/img/gallery/project6.png" alt="">
                                                 </div>
@@ -682,7 +684,7 @@
         </section>
         <!-- Project Area End -->
         <!-- CountDown Area Start -->
-        <div class="count-area">
+        <div class="count-area" data-aos="fade-up">
             <div class="container">
                 <div class="count-wrapper count-bg" data-background="assets/img/gallery/section-bg3.jpg">
                     <div class="row justify-content-center" >
@@ -731,7 +733,7 @@
         </div>
         <!-- CountDown Area End -->
         <!-- Testimonial Start -->
-        <div class="testimonial-area t-bg testimonial-padding">
+        <div class="testimonial-area t-bg testimonial-padding" data-aos="fade-up">
             <div class="container ">
                 <div class="row">
                     <div class="col-xl-12">
@@ -812,7 +814,7 @@
                 <div class="row">
                     <div class="col-xl-6 col-lg-6 col-md-6">
                         <!-- single-news -->
-                        <div class="single-news mb-30">
+                        <div class="single-news mb-30" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="500">
                             <div class="news-img">
                                 <img src="assets/img/david/david_1.png" alt="">
                                 <div class="news-date text-center">
@@ -831,7 +833,7 @@
                     </div>
                     <div class="col-xl-6 col-lg-6 col-md-6">
                         <!-- single-news -->
-                        <div class="single-news mb-30">
+                        <div class="single-news mb-30" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="300">
                             <div class="news-img">
                                 <img src="assets/img/david/david_2.png" alt="">
                                 <div class="news-date text-center">
@@ -939,7 +941,10 @@
 </footer>
    
 	<!-- JS here -->
-	
+        <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
+        <script>
+            AOS.init();
+        </script>
 		<!-- All JS Custom Plugins Link Here here -->
         <script src="./assets/js/vendor/modernizr-3.5.0.min.js"></script>
 		<!-- Jquery, Popper, Bootstrap -->
