--- a/elements.html
+++ b/elements.html
@@ -35,7 +35,7 @@
         </div>
     </div>
     <!-- Preloader Start -->
-    <header>
+	<header>
         <!-- Header Start -->
        <div class="header-area header-transparent">
             <div class="main-header ">
@@ -48,7 +48,7 @@
                                     <!-- logo-1 -->
                                     <a href="index.html" class="big-logo"><img src="assets/img/logo/logo.png" alt=""></a>
                                     <!-- logo-2 -->
-                                    <a href="index.html" class="small-logo"><img src="assets/img/logo/loder-logo.png" alt=""></a>
+                                    <a href="index.html" class="small-logo"><img class="logo-img" src="assets/img/logo/loder-logo.png" alt=""></a>
                                 </div>
                             </div>
                             <div class="col-xl-8 col-lg-8 col-md-8">
