--- a/project.html
+++ b/project.html
@@ -136,33 +136,33 @@
                                     <div class="col-xl-4 col-lg-4 col-md-6 col-sm-">
                                             <div class="single-team mb-30">
                                                 <div class="team-img">
-                                                    <img src="assets/img/team/team1.png" alt="">
+                                                    <img src="assets/img/team/team1.jpg" alt="">
                                                 </div>
                                                 <div class="team-caption">
-                                                    <span>UX Designer</span>
-                                                    <h3>Ethan Welch</h3>
+                                                    <span>Founding Partner & GM</span>
+                                                    <h3>Ahmed Bin Mes’har</h3>
                                                 </div>
                                             </div>
                                         </div>
                                         <div class="col-xl-4 col-lg-4 col-md-6 col-sm-">
                                             <div class="single-team mb-30">
                                                 <div class="team-img">
-                                                    <img src="assets/img/team/team2.png" alt="">
+                                                    <img src="assets/img/team/team2.jpg" alt="">
                                                 </div>
                                                 <div class="team-caption">
-                                                    <span>UX Designer</span>
-                                                    <h3>Ethan Welch</h3>
+                                                    <span>Founding Partner & CEO</span>
+                                                    <h3>Mansoor Al Mazmi</h3>
                                                 </div>
                                             </div>
                                         </div>
                                         <div class="col-xl-4 col-lg-4 col-md-6 col-sm-">
                                             <div class="single-team mb-30">
                                                 <div class="team-img">
-                                                    <img src="assets/img/team/team3.png" alt="">
+                                                    <img src="assets/img/team/team3.jpg" alt="">
                                                 </div>
                                                 <div class="team-caption">
-                                                    <span>UX Designer</span>
-                                                    <h3>Ethan Welch</h3>
+                                                    <span>Strategic Partner</span>
+                                                    <h3>John Maalouf</h3>
                                                 </div>
                                             </div>
                                         </div>
