--- a/index.html
+++ b/index.html
@@ -25,18 +25,19 @@
    </head>
 
    <body>
-    <!-- Preloader Start -->
-    <div id="preloader-active">
-        <div class="preloader d-flex align-items-center justify-content-center">
-            <div class="preloader-inner position-relative">
-                <div class="preloader-circle"></div>
-                <div class="preloader-img pere-text">
-                    <img src="assets/img/logo/loder-logo.png" alt="">
-                </div>
+<!-- Preloader Start -->
+<div id="preloader-active">
+    <div class="preloader d-flex align-items-center justify-content-center">
+        <div class="preloader-inner position-relative">
+            <div class="preloader-circle"></div>
+            <div class="preloader-img pere-text">
+                <img src="assets/img/logo/loder-logo.png" alt="Preloader Logo">
             </div>
         </div>
     </div>
-    <!-- Preloader Start -->
+</div>
+<!-- Preloader End -->
+
     <header>
         <!-- Header Start -->
        <div class="header-area header-transparent">
@@ -558,8 +559,8 @@
                 </div>
             </div>
             <div class="support-caption">
-                <p class="pera-top">Mollit anim laborum duis au dolor in voluptcate velit ess cillum dolore eu lore dsu quality mollit anim laborumuis au dolor in voluptate velit cillu.</p>
-                <p>Mollit anim laborum.Dvcuis aute iruxvfg dhjkolohr in re voluptate velit esscillumlore eu quife nrulla parihatur. Excghcepteur sfwsignjnt occa cupidatat non aute iruxvfg dhjinulpadeserunt mollitemnth incididbnt ut;o5tu layjobore mofllit anim.</p>
+                <p class="pera-top">Bin Mes'har & Co</p>
+                <p>Bin Meshar & Co. has built a distinguished reputation for its exceptional legal expertise since its inception. Our legal services span a broad range of practice areas, including commercial, civil, and criminal transactions, as well as banking, maritime law, transportation, arbitration, real estate laws, and various types of litigation.</p>
                 <a href="about.html" class="btn red-btn2">read more</a>
             </div>
         </div>
@@ -581,7 +582,6 @@
                             <div class="front-text">
                                 <h2 class="">Our <br> Services</h2>
                             </div>
-                            <span class="back-text">services</span>
                         </div>
                 
                 <!-- Services Cards -->
