--- a/project.html
+++ b/project.html
@@ -31,7 +31,7 @@
             <div class="preloader-inner position-relative">
                 <div class="preloader-circle"></div>
                 <div class="preloader-img pere-text">
-                    <img src="assets/img/logo/loder-logo.jpg" alt="">
+                    <img src="assets/img/logo/loder-logo.png" alt="">
                 </div>
             </div>
         </div>
