--- a/services_details.html
+++ b/services_details.html
@@ -137,14 +137,14 @@
                             </div>
                             <div class="footer-tittle">
                                 <ul>
-                                    <li><strong>Dubai:</strong> Deira - Business Village Building Block B - 4th Floor - Office 412</li>
-                                    <li>Phone: (+971) 4 386 9999</li>
-                                    <li>Email: <a href="mailto:advocates@binmeshar.com">advocates@binmeshar.com</a></li>
+                                    <li><strong>Dubai:</strong>Khalid Bin Waleed Road, Bank Street Building, 2nd Floor Office 215, Dubai. PO BOX 21602, United Arab Emirates</li>
+                                    <li>Phone: (+971) 4 355 0004</li>
+                                    <li>Email: <a href="mailto:canlaw@emirates.net.ae">canlaw@emirates.net.ae</a></li>
                                 </ul>
                                 <ul>
-                                    <li><strong>Abu Dhabi:</strong> Al Muroor St. - Sorouh Tower - 11th Floor - Office 1103</li>
-                                    <li>Phone: (+971) 2 635 8585</li>
-                                    <li>Email: <a href="mailto:abudhabi@binmeshar.com">abudhabi@binmeshar.com</a></li>
+                                    <li><strong>Paris:</strong>39Bis, Boulevard Exelmans, 75016 Paris</li>
+                                    <li>Phone: (+33) 145531996</li>
+                                    <li>Email: <a href="mailto:contact@jdavocat.com">contact@jdavocat.com</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -156,9 +156,9 @@
                             <div class="footer-tittle">
                                 <h4>Quick Links</h4>
                                 <ul>
-                                    <li><a href="#">Contact Us</a></li>
-                                    <li><a href="#">Meet the Team</a></li>
-                                    <li><a href="#">Estimates</a></li>
+                                    <li><a href="contact.html">Contact Us</a></li>
+                                    <li><a href="project.html">Meet the Team</a></li>
+                                    <li><a href="blog.html">Estimates</a></li>
                                     <li><a href="#">Our Process</a></li>
                                 </ul>
                             </div>
@@ -204,6 +204,7 @@
     </div>
     <!-- Footer End-->
 </footer>
+   
    
 	<!-- JS here -->
 	
